syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "audit.proto";
import "common.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "chorus audit service";
        version: "1.0";
        contact: {
            name: "chorus audit service";
            url: "https://github.com/CHORUS-TRE/chorus-backend";
            email: "dev@chorus-tre.ch";
        };
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
};

// Platform audit entries listing
message ListPlatformAuditRequest {
    PaginationQuery pagination = 1;
    optional AuditFilter filter = 2;
}

// Entity-specific audit entries listing (workspace, workbench, user)
message ListEntityAuditRequest {
    uint64 id = 1;
    PaginationQuery pagination = 2;
    optional AuditFilter filter = 3;
}

message ListAuditReply {
    ListAuditResult result = 1;
    optional PaginationResult pagination = 2;
}
message ListAuditResult {
    repeated AuditEntry entries = 1;
}


service AuditService {
    rpc ListPlatformAudit(ListPlatformAuditRequest) returns (ListAuditReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/audit"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List platform audit entries";
            description: "This endpoint returns a list of platform audit entries";
            tags: "AuditService";
        };
    }

    rpc ListWorkspaceAudit(ListEntityAuditRequest) returns (ListAuditReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/audit/workspaces/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List workspace audit entries";
            description: "This endpoint returns audit entries for a specific workspace";
            tags: "AuditService";
        };
    };

    rpc ListWorkbenchAudit(ListEntityAuditRequest) returns (ListAuditReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/audit/workbenches/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List workbench audit entries";
            description: "This endpoint returns audit entries for a specific workbench";
            tags: "AuditService";
        };
    };

    rpc ListUserAudit(ListEntityAuditRequest) returns (ListAuditReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/audit/users/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List user audit entries";
            description: "This endpoint returns audit entries for a specific user";
            tags: "AuditService";
        };
    };
}